--- a/BBB/WebContent/css/join.css
+++ b/BBB/WebContent/css/join.css
@@ -40,6 +40,10 @@ input::placeholder {
 .id-form {
     position: relative;
 }
+
+.phone-form {
+	position: relative;
+}
   
 button {
     position: absolute;
@@ -47,7 +51,7 @@ button {
     height: 40px;
     top: 0;
     bottom: 20px;
-    right: 15px;
+    right: 30%;
     border-radius: 3px;
     margin: auto 0;
     border: none;
