--- a/BBB/WebContent/css/dict.css
+++ b/BBB/WebContent/css/dict.css
@@ -36,6 +36,11 @@ table.type10 td:nth-child(4) {
     width: 700px;
 }
 
+
+table.type10 td:nth-child(5) {
+    width: 100px;
+}
+
 table.type10 td {
     width: 300px;
     padding: 10px;
@@ -59,361 +64,3 @@ table.type10 td {
     color: #999;
 }
 
-
-/* 팝업 */
-#popup-design {
-    position: fixed;
-    display: none;
-    width: 700px;
-    height: 500px;
-    border-radius: 10px;
-    position: absolute;
-    top: -5%;
-    left: 50%;
-    transform: translate(-50%, 50%);
-    background-color: #fff;
-    z-index: 200000;
-}
-
-.open-popup {
-    transition: all .4s ease;
-}
-
-.pop-content {
-    display: flex;
-    flex-direction: column;
-    padding: 10px 10px;
-    margin-top: 3%;
-    align-items: center;
-    justify-content: center;
-}
-
-.backon {
-    content: "";
-    width: 100%;
-    height: 100%;
-    background: rgba(0, 0, 0, .6);
-    position: fixed;
-    top: 0;
-    left: 0;
-    z-index: 20000;
-}
-
-.pop-wrap {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-
-.pop-item {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-}
-
-.pop-tit .num,
-.pop-tit .tit,
-.pop-txt,
-.pop-content hr,
-.pop-tit .sub-tit {
-    position: absolute;
-}
-
-
-.pop-tit .num {
-    top: -5%;
-    left: 30%;
-    font-size: 200px;
-    font-family: 'Noto Bb';
-    -webkit-text-stroke: 2px rgb(131, 131, 131);
-    color: rgba(0, 0, 0, 0);
-    filter: blur(1.5px);
-}
-
-.pop-tit .tit {
-    font-family: 'Noto Bb';
-    font-size: 60px;
-    top: 25%;
-    left: 40%;
-}
-
-.pop-tit .sub-tit {
-    font-family: 'Noto Bb';
-    font-size: 20px;
-    top: 22%;
-    left: 45%;
-}
-
-.pop-content hr {
-    top: 50%;
-    height: 10px;
-    background-color: black;
-    width: 100px;
-}
-
-.pop-txt {
-    font-family: 'Noto M';
-    font-size: 20px;
-    bottom: 30%;
-}
-
-
-svg {
-    cursor: pointer;
-    overflow: visible;
-    width: 60px;
-    position: absolute;
-    top: 80%;
-    left: 46%;
-}
-
-svg #heart {
-    transform-origin: center;
-    animation: animateHeartOut 0.3s linear forwards;
-}
-
-svg #main-circ {
-    transform-origin: 29.5px 29.5px;
-}
-
-#checkbox {
-    display: none;
-}
-
-#checkbox:checked+label svg #heart {
-    transform: scale(0.2);
-    fill: #E2264D;
-    animation: animateHeart 0.3s linear forwards 0.25s;
-}
-
-#checkbox:checked+label svg #main-circ {
-    transition: all 2s;
-    animation: animateCircle 0.3s linear forwards;
-    opacity: 1;
-}
-
-#checkbox:checked+label svg #grp1 {
-    opacity: 1;
-    transition: 0.1s all 0.3s;
-}
-
-#checkbox:checked+label svg #grp1 #oval1 {
-    transform: scale(0) translate(0, -30px);
-    transform-origin: 0 0 0;
-    transition: 0.5s transform 0.3s;
-}
-
-#checkbox:checked+label svg #grp1 #oval2 {
-    transform: scale(0) translate(10px, -50px);
-    transform-origin: 0 0 0;
-    transition: 1.5s transform 0.3s;
-}
-
-#checkbox:checked+label svg #grp2 {
-    opacity: 1;
-    transition: 0.1s all 0.3s;
-}
-
-#checkbox:checked+label svg #grp2 #oval1 {
-    transform: scale(0) translate(30px, -15px);
-    transform-origin: 0 0 0;
-    transition: 0.5s transform 0.3s;
-}
-
-#checkbox:checked+label svg #grp2 #oval2 {
-    transform: scale(0) translate(60px, -15px);
-    transform-origin: 0 0 0;
-    transition: 1.5s transform 0.3s;
-}
-
-#checkbox:checked+label svg #grp3 {
-    opacity: 1;
-    transition: 0.1s all 0.3s;
-}
-
-#checkbox:checked+label svg #grp3 #oval1 {
-    transform: scale(0) translate(30px, 0px);
-    transform-origin: 0 0 0;
-    transition: 0.5s transform 0.3s;
-}
-
-#checkbox:checked+label svg #grp3 #oval2 {
-    transform: scale(0) translate(60px, 10px);
-    transform-origin: 0 0 0;
-    transition: 1.5s transform 0.3s;
-}
-
-#checkbox:checked+label svg #grp4 {
-    opacity: 1;
-    transition: 0.1s all 0.3s;
-}
-
-#checkbox:checked+label svg #grp4 #oval1 {
-    transform: scale(0) translate(30px, 15px);
-    transform-origin: 0 0 0;
-    transition: 0.5s transform 0.3s;
-}
-
-#checkbox:checked+label svg #grp4 #oval2 {
-    transform: scale(0) translate(40px, 50px);
-    transform-origin: 0 0 0;
-    transition: 1.5s transform 0.3s;
-}
-
-#checkbox:checked+label svg #grp5 {
-    opacity: 1;
-    transition: 0.1s all 0.3s;
-}
-
-#checkbox:checked+label svg #grp5 #oval1 {
-    transform: scale(0) translate(-10px, 20px);
-    transform-origin: 0 0 0;
-    transition: 0.5s transform 0.3s;
-}
-
-#checkbox:checked+label svg #grp5 #oval2 {
-    transform: scale(0) translate(-60px, 30px);
-    transform-origin: 0 0 0;
-    transition: 1.5s transform 0.3s;
-}
-
-#checkbox:checked+label svg #grp6 {
-    opacity: 1;
-    transition: 0.1s all 0.3s;
-}
-
-#checkbox:checked+label svg #grp6 #oval1 {
-    transform: scale(0) translate(-30px, 0px);
-    transform-origin: 0 0 0;
-    transition: 0.5s transform 0.3s;
-}
-
-#checkbox:checked+label svg #grp6 #oval2 {
-    transform: scale(0) translate(-60px, -5px);
-    transform-origin: 0 0 0;
-    transition: 1.5s transform 0.3s;
-}
-
-#checkbox:checked+label svg #grp7 {
-    opacity: 1;
-    transition: 0.1s all 0.3s;
-}
-
-#checkbox:checked+label svg #grp7 #oval1 {
-    transform: scale(0) translate(-30px, -15px);
-    transform-origin: 0 0 0;
-    transition: 0.5s transform 0.3s;
-}
-
-#checkbox:checked+label svg #grp7 #oval2 {
-    transform: scale(0) translate(-55px, -30px);
-    transform-origin: 0 0 0;
-    transition: 1.5s transform 0.3s;
-}
-
-#checkbox:checked+label svg #grp2 {
-    opacity: 1;
-    transition: 0.1s opacity 0.3s;
-}
-
-#checkbox:checked+label svg #grp3 {
-    opacity: 1;
-    transition: 0.1s opacity 0.3s;
-}
-
-#checkbox:checked+label svg #grp4 {
-    opacity: 1;
-    transition: 0.1s opacity 0.3s;
-}
-
-#checkbox:checked+label svg #grp5 {
-    opacity: 1;
-    transition: 0.1s opacity 0.3s;
-}
-
-#checkbox:checked+label svg #grp6 {
-    opacity: 1;
-    transition: 0.1s opacity 0.3s;
-}
-
-#checkbox:checked+label svg #grp7 {
-    opacity: 1;
-    transition: 0.1s opacity 0.3s;
-}
-
-@keyframes animateCircle {
-    40% {
-        transform: scale(10);
-        opacity: 1;
-        fill: #DD4688;
-    }
-
-    55% {
-        transform: scale(11);
-        opacity: 1;
-        fill: #D46ABF;
-    }
-
-    65% {
-        transform: scale(12);
-        opacity: 1;
-        fill: #CC8EF5;
-    }
-
-    75% {
-        transform: scale(13);
-        opacity: 1;
-        fill: transparent;
-        stroke: #CC8EF5;
-        stroke-width: 0.5;
-    }
-
-    85% {
-        transform: scale(17);
-        opacity: 1;
-        fill: transparent;
-        stroke: #CC8EF5;
-        stroke-width: 0.2;
-    }
-
-    95% {
-        transform: scale(18);
-        opacity: 1;
-        fill: transparent;
-        stroke: #CC8EF5;
-        stroke-width: 0.1;
-    }
-
-    100% {
-        transform: scale(19);
-        opacity: 1;
-        fill: transparent;
-        stroke: #CC8EF5;
-        stroke-width: 0;
-    }
-}
-
-@keyframes animateHeart {
-    0% {
-        transform: scale(0.2);
-    }
-
-    40% {
-        transform: scale(1.2);
-    }
-
-    100% {
-        transform: scale(1);
-    }
-}
-
-@keyframes animateHeartOut {
-    0% {
-        transform: scale(1.4);
-    }
-
-    100% {
-        transform: scale(1);
-    }
-}
