--- a/BBB/WebContent/css/add.css
+++ b/BBB/WebContent/css/add.css
@@ -1,447 +1,163 @@
-* {
-   color: #fff;
-}
+ .header-list .log {
+     width: 100px;
+     border: 1px solid rgb(197, 197, 197);
+     border-radius: 50px;
+ }
 
-.header-list .log {
-    width: 100px;
-    border: 1px solid rgb(197, 197, 197);
-    border-radius: 50px;
-}
-
-.header-list li .sub-menu .logo a {
-    color: rgb(219, 219, 219);
-}
+ .header-list li .sub-menu .logo a {
+     color: rgb(219, 219, 219);
+ }
 
 
-body {
-    background: rgb(30, 30, 40);
-}
+ body {
+     background: rgb(30, 30, 40);
+ }
 
-form {
-    max-width: 420px;
-    margin: 50px auto;
-}
+ form {
+     max-width: 420px;
+     margin: 50px auto;
+ }
 
-.title .tit {
-    color: white;
-    text-align: center;
-    font-size: 70px;
-    font-family: 'Noto Bb';
-    padding-bottom: 50px;
-}
-
-.feedback-input {
-    color: white;
-    font-size: 18px;
-    border-radius: 5px;
-    line-height: 22px;
-    background-color: transparent;
-    border: 2px solid #CC6666;
-    transition: all 0.3s;
-    padding: 13px;
-    margin-bottom: 15px;
-    width: 100%;
-    box-sizing: border-box;
-    outline: 0;
-}
-
-.feedback-input:focus {
-    border: 2px solid #CC4949;
-}
-
-textarea {
-    height: 150px;
-    line-height: 150%;
-    resize: vertical;
-}
-
-[type="submit"] {
-    width: 100%;
-    background: #CC6666;
-    border-radius: 5px;
-    border: 0;
-    cursor: pointer;
-    color: white;
-    font-size: 24px;
-    padding-top: 10px;
-    padding-bottom: 10px;
-    transition: all 0.3s;
-    margin-top: -4px;
-}
-
-[type="submit"]:hover {
-    background: #CC4949;
-}
-
-
-.selectMultiple {
-    width: 420px;
-    position: relative;
-    margin-bottom: 12px;
-}
-
-.selectMultiple select {
-    display: none;
-}
-
-.selectMultiple>div {
-    position: relative;
-    z-index: 2;
-    padding: 8px 12px 2px 12px;
-    border-radius: 5px;
-    background: rgba(255, 255, 255, 0);
-    border: 2px solid #CC6666;
-    font-size: 14px;
-    min-height: 52px;
-    box-shadow: 0 4px 16px 0 rgba(22, 42, 90, 0.12);
-    transition: box-shadow 0.3s ease;
-}
-
-.selectMultiple>div .arrow {
-    right: 1px;
-    top: 0;
-    bottom: 0;
-    cursor: pointer;
-    width: 28px;
-    position: absolute;
-}
-
-.selectMultiple>div .arrow:before,
-.selectMultiple>div .arrow:after {
-    content: "";
-    position: absolute;
-    display: block;
-    width: 2px;
-    height: 8px;
-    border-bottom: 8px solid #99A3BA;
-    top: 43%;
-    transition: all 0.3s ease;
-}
-
-.selectMultiple>div .arrow:before {
-    right: 12px;
-    transform: rotate(-130deg);
-}
-
-.selectMultiple>div .arrow:after {
-    left: 9px;
-    transform: rotate(130deg);
-}
-
-.selectMultiple>div span {
+ .title .tit {
      color: white;
-    display: block;
-    position: absolute;
-    left: 12px;
-    cursor: pointer;
-    top: 12px;
-    transition: all 0.3s ease;
-}
+     text-align: center;
+     font-size: 70px;
+     font-family: 'Noto Bb';
+     padding-bottom: 50px;
+ }
 
-.selectMultiple>div span.hide {
-    opacity: 0;
-    visibility: hidden;
-    transform: translate(-4px, 0);
-}
+ .feedback-input {
+     color: white;
+     font-size: 18px;
+     border-radius: 5px;
+     line-height: 22px;
+     background-color: transparent;
+     border: 2px solid #CC6666;
+     transition: all 0.3s;
+     padding: 13px;
+     margin-bottom: 15px;
+     width: 100%;
+     box-sizing: border-box;
+     outline: 0;
+ }
 
-.selectMultiple>div a {
-    position: relative;
-    padding: 0 24px 6px 8px;
-    line-height: 28px;
-   	color: #fff;
-    display: inline-block;
-    vertical-align: top;
-    margin: 0 6px 0 0;
-}
+ .feedback-input:focus {
+     border: 2px solid #CC4949;
+ }
 
-.selectMultiple>div a em {
-    font-style: normal;
-    display: block;
-    white-space: nowrap;
-}
+ textarea {
+     height: 150px;
+     line-height: 150%;
+     resize: vertical;
+ }
 
-.selectMultiple>div a:before {
-    content: "";
-    left: 0;
-    top: 0;
-    bottom: 6px;
-    width: 100%;
-    position: absolute;
-    display: block;
-    background: #CC6666;
-    z-index: -1;
-    border-radius: 4px;
-   	color: #fff;
-}
+ [type="submit"] {
+     width: 100%;
+     background: #CC6666;
+     border-radius: 5px;
+     border: 0;
+     cursor: pointer;
+     color: white;
+     font-size: 24px;
+     padding-top: 10px;
+     padding-bottom: 10px;
+     transition: all 0.3s;
+     margin-top: -4px;
+ }
 
-.selectMultiple>div a i {
-    cursor: pointer;
-    position: absolute;
-    top: 0;
-    right: 0;
-    width: 24px;
-    height: 28px;
-    display: block;
-}
-
-.selectMultiple>div a i:before,
-.selectMultiple>div a i:after {
-    content: "";
-    display: block;
-    width: 2px;
-    height: 10px;
-    position: absolute;
-    left: 50%;
-    top: 50%;
-    background: #ffffff;
-    border-radius: 1px;
-}
-
-.selectMultiple>div a i:before {
-    transform: translate(-50%, -50%) rotate(45deg);
-}
-
-.selectMultiple>div a i:after {
-    transform: translate(-50%, -50%) rotate(-45deg);
-}
-
-.selectMultiple>div a.notShown {
-    opacity: 0;
-    transition: opacity 0.3s ease;
-}
-
-.selectMultiple>div a.notShown:before {
-    width: 28px;
-    transition: width 0.45s cubic-bezier(0.87, -0.41, 0.19, 1.44) 0.2s;
-}
-
-.selectMultiple>div a.notShown i {
-    opacity: 0;
-    transition: all 0.3s ease 0.3s;
-}
-
-.selectMultiple>div a.notShown em {
-    opacity: 0;
-    transform: translate(-6px, 0);
-    transition: all 0.4s ease 0.3s;
-}
-
-.selectMultiple>div a.notShown.shown {
-    opacity: 1;
-}
-
-.selectMultiple>div a.notShown.shown:before {
-    width: 100%;
-}
-
-.selectMultiple>div a.notShown.shown i {
-    opacity: 1;
-}
-
-.selectMultiple>div a.notShown.shown em {
-    opacity: 1;
-    transform: translate(0, 0);
-}
-
-.selectMultiple>div a.remove:before {
-    width: 28px;
-    transition: width 0.4s cubic-bezier(0.87, -0.41, 0.19, 1.44) 0s;
-}
-
-.selectMultiple>div a.remove i {
-    opacity: 0;
-    transition: all 0.3s ease 0s;
-}
-
-.selectMultiple>div a.remove em {
-    opacity: 0;
-    transform: translate(-12px, 0);
-    transition: all 0.4s ease 0s;
-}
-
-.selectMultiple>div a.remove.disappear {
-    opacity: 0;
-    transition: opacity 0.5s ease 0s;
-}
-
-.selectMultiple>ul {
-    margin: 0;
-    padding: 0;
-    list-style: none;
-    font-size: 16px;
-    z-index: 1;
-    position: absolute;
-    top: 100%;
-    left: 0;
-    right: 0;
-    visibility: hidden;
-    opacity: 0;
-    border-radius: 8px;
-    transform: translate(0, 20px) scale(0.8);
-    transform-origin: 0 0;
-    filter: drop-shadow(0 12px 20px rgba(22, 42, 90, 0.08));
-    transition: all 0.4s ease, transform 0.4s cubic-bezier(0.87, -0.41, 0.19, 1.44), filter 0.3s ease 0.2s;
-}
-
-.selectMultiple>ul li {
-    color: #1E2330;
-    background: #fff;
-    padding: 12px 16px;
-    cursor: pointer;
-    overflow: hidden;
-    position: relative;
-    transition: background 0.3s ease, color 0.3s ease, transform 0.3s ease 0.3s, opacity 0.5s ease 0.3s, border-radius 0.3s ease 0.3s;
-}
-
-.selectMultiple>ul li:first-child {
-    border-radius: 8px 8px 0 0;
-}
-
-.selectMultiple>ul li:first-child:last-child {
-    border-radius: 8px;
-}
-
-.selectMultiple>ul li:last-child {
-    border-radius: 0 0 8px 8px;
-}
-
-.selectMultiple>ul li:last-child:first-child {
-    border-radius: 8px;
-}
-
-.selectMultiple>ul li:hover {
-    background: #777777;
-    color: #fff;
-}
-
-.selectMultiple>ul li:after {
-    content: "";
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    width: 6px;
-    height: 6px;
-    background: rgba(0, 0, 0, 0.4);
-    opacity: 0;
-    border-radius: 100%;
-    transform: scale(1, 1) translate(-50%, -50%);
-    transform-origin: 50% 50%;
-}
-
-.selectMultiple>ul li.beforeRemove {
-    border-radius: 0 0 8px 8px;
-}
-
-.selectMultiple>ul li.beforeRemove:first-child {
-    border-radius: 8px;
-}
-
-.selectMultiple>ul li.afterRemove {
-    border-radius: 8px 8px 0 0;
-}
-
-.selectMultiple>ul li.afterRemove:last-child {
-    border-radius: 8px;
-}
-
-.selectMultiple>ul li.remove {
-    transform: scale(0);
-    opacity: 0;
-}
-
-.selectMultiple>ul li.remove:after {
-    animation: ripple 0.4s ease-out;
-}
-
-.selectMultiple>ul li.notShown {
-    display: none;
-    transform: scale(0);
-    opacity: 0;
-    transition: transform 0.35s ease, opacity 0.4s ease;
-}
-
-.selectMultiple>ul li.notShown.show {
-    transform: scale(1);
-    opacity: 1;
-}
-
-.selectMultiple.open>div {
-    box-shadow: 0 4px 20px -1px rgba(22, 42, 90, 0.12);
-}
-
-.selectMultiple.open>div .arrow:before {
-    transform: rotate(-50deg);
-}
-
-.selectMultiple.open>div .arrow:after {
-    transform: rotate(50deg);
-}
-
-.selectMultiple.open>ul {
-    transform: translate(0, 12px) scale(1);
-    opacity: 1;
-    visibility: visible;
-    filter: drop-shadow(0 16px 24px rgba(22, 42, 90, 0.16));
-}
-
-@keyframes ripple {
-    0% {
-        transform: scale(0, 0);
-        opacity: 1;
-    }
-
-    25% {
-        transform: scale(30, 30);
-        opacity: 1;
-    }
-
-    100% {
-        opacity: 0;
-        transform: scale(50, 50);
-    }
-}
-
-html {
-    box-sizing: border-box;
-    -webkit-font-smoothing: antialiased;
-}
-
-* {
-    box-sizing: inherit;
-}
-
-*:before,
-*:after {
-    box-sizing: inherit;
-}
+ [type="submit"]:hover {
+     background: #CC4949;
+ }
 
 
-body .selectMultiple {
-    margin-top: -12%;
-}
 
-body .dribbble {
-    position: fixed;
-    display: block;
-    right: 20px;
-    bottom: 20px;
-    opacity: 0.5;
-    transition: all 0.4s ease;
-}
+ .selectdiv {
+     position: relative;
+     /*Don't really need this just for demo styling*/
+    margin-bottom: 15px;
+     float: left;
+ }
 
-body .dribbble:hover {
-    opacity: 1;
-}
+ /* IE11 hide native button (thanks Matt!) */
+ select::-ms-expand {
+     display: none;
+ }
 
-body .dribbble img {
-    display: block;
-    height: 36px;
-}
+ .selectdiv:after {
+     content: '<>';
+     font: 17px "Consolas", monospace;
+     color: rgb(255, 255, 255);
+     -webkit-transform: rotate(90deg);
+     -moz-transform: rotate(90deg);
+     -ms-transform: rotate(90deg);
+     transform: rotate(90deg);
+     right: 15px;
+     /*Adjust for position however you want*/
 
-.add-wrap form select option {
-	color: #fff;
-}
+     top: 15px;
+     padding: 0 0 2px;
+     border-bottom: 1px solid #999;
+     /*left line */
 
-* {
-	color: #fff;
-}
+     position: absolute;
+     pointer-events: none;
+ }
+
+ .selectdiv select {
+     -webkit-appearance: none;
+     -moz-appearance: none;
+     appearance: none;
+     /* Add some styling */
+     display: block;
+     width: 420px;
+     height: 52px;
+     padding: 0px 24px;
+     font-size: 16px;
+     line-height: 1.75;
+     color: rgb(255, 255, 255);
+     background-color: #ffffff00;
+     background-image: none;
+     border: 2px solid #CC6666;
+     -ms-word-break: normal;
+     word-break: normal;
+    border-radius: 5px;
+ }
+
+
+
+ html {
+     box-sizing: border-box;
+     -webkit-font-smoothing: antialiased;
+ }
+
+ * {
+     box-sizing: inherit;
+ }
+
+ *:before,
+ *:after {
+     box-sizing: inherit;
+ }
+
+
+ body .selectMultiple {
+     margin-top: -12%;
+ }
+
+ body .dribbble {
+     position: fixed;
+     display: block;
+     right: 20px;
+     bottom: 20px;
+     opacity: 0.5;
+     transition: all 0.4s ease;
+ }
+
+ body .dribbble:hover {
+     opacity: 1;
+ }
+
+ body .dribbble img {
+     display: block;
+     height: 36px;
+ }
