--- a/BBB/WebContent/css/admin.css
+++ b/BBB/WebContent/css/admin.css
@@ -109,3 +109,41 @@
 .description-task, .members .txt {
     text-align: center;
 }
+
+
+.more-button:focus ~ .more-box {
+    display: block;
+}
+
+.more-box {
+    display: none;
+    top: 30px;
+    right: -35%;
+    width: 100px;
+    height: 45px;
+    position: absolute;
+    background-color: white;
+}
+
+.more-box-wrap {
+    display: flex;
+    height: 100%;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    border-radius: 5px;
+    box-shadow: 0px 0px 10px 2px rgba(0, 0, 0, 0.151);
+}
+
+.more-box-wrap a {
+    width: 100%;
+}
+
+.more-box-wrap a:first-child {
+    border-bottom: 1px solid rgb(230, 230, 230);
+}
+
+.more-box-wrap a:hover {
+    background-color: rgb(230, 230, 230);
+    
+}
